# byte-mnemonic

./: README.md  index.html  words.txt
js/: README.md  package.json  tsconfig.json
js/src/: index.ts
rust/: Cargo.toml  README.md
rust/src/: lib.rs
